# nle

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  DATASET.md  Dockerfile  Files.nh  Files.nle  MANIFEST.in  README.md  introtonethack.ipynb  pyproject.toml  setup.py
.circleci/: config.yml
.github/: pr-labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build_docker.yml  check_license.yml  lint_cc.yml  lint_python.yml  pr-labeler.yml  release-drafter.yml  test_and_deploy.yml  test_docker.yml  test_docker.yml   test_package.yml
dashboard/: README.md  config.js  server.js
dashboard/app/: actions.js  dashboard.html  style.css
dashboard/data/: example_nethack.0.ttyrec  example_nethack.1.ttyrec  example_nethack.2.ttyrec  stats.csv
dashboard/tests/: lint.sh
dat/: CMakeLists.txt
doc/minihack/: README.md  tasks.md
doc/nle/: ARCHITECTURE.md  README.md
doc/nle/source/: conf.py  getting_started.rst  index.rst  nle.agent.rst  nle.env.rst  nle.nethack.rst  nle.rst  nle.scripts.rst
docker/: Dockerfile  Dockerfile-bionic  Dockerfile-focal  Dockerfile-xenial  Dockerfile.valgrind  README.md
include/: config.h  dloverride.h  extern.h  flag.h  nle.h  nledl.h  nleinstance.h  nleobs.h  tcap.h  tradstdc.h  unixconf.h  wintty.h
nle/: __init__.py  pynle.py
nle/agent/: Dockerfile  NeurIPS2020.md  README.md  agent.py  config.yaml  neurips_sweep.sh  polybeast_env.py  polybeast_learner.py  polyhydra.py  requirements.txt  vtrace.py
nle/agent/challenge-baseline/: polybeast_env.py  polyhydra.py
nle/agent/challenge-baseline/core/: vtrace.py
nle/agent/challenge-baseline/models/: __init__.py
nle/agent/core/: file_writer.py  prof.py  vtrace_test.py
nle/agent/envs/: tasks.py  wrapper.py
nle/agent/models/: __init__.py  base.py  baseline.py  dynamics.py  embed.py  intrinsic.py  losses.py  transformer.py
nle/agent/util/: id_pairs.py
nle/dashboard/: .eslintrc.json  .gitignore  README.md  config.js  lint.sh  package-lock.json  package.json  server.js
nle/dashboard/app/: actions.js  dashboard.html  style.css
nle/dataset/: __init__.py  dataset.py  db.py  populate_db.py
nle/env/: __init__.py  base.py  mh_base.py  mh_skills.py  mh_tasks.py  minihack.py  tasks.py  wrappers.py
nle/env/dat/: closed_door.des  empty.des  four_rooms.des  key_and_door.des  lava_crossing.des  locked_door.des  mazewalk.des  multiroom.des  multiroom2.des  simple_crossing.des
nle/env/lib/: dungeon
nle/minihack/: __init__.py  actions.py  base.py  goal_generator.py  level_gen.py  level_generator.py  minigrid.py  navigation.py  skills.py  tasks.py  wiki.py
nle/minihack/dat/: corridor.des  corridor10.des  corridor2.des  corridor3.des  corridor5.des  corridor8.des  empty.des  four_rooms.des  key_and_door_tmp.des  lava_crossing.des  mazewalk.des
nle/minihack/envs/: boxohack.py  corridor.py  keyroom.py  minigrid.py  room.py
nle/minihack/scripts/: get_nhwiki_data.sh  mh_patch_nhdat.sh
nle/nethack/: __init__.py  actions.py  nethack.py  print_message.py  ptyprocess.py
nle/rllib_agent/: __init__.py  environments.py  models.py  run.py
nle/scripts/: bench.py  check_nethack_speed.py  collect_env.py  hiplot.py  neurips_plot.py  nh-clean-install  nle_ctypes_api.py  patch_nhdat.sh  play.py  plot.py  read_heaplog.py  read_tty.py  run-clang-format  test_pynle.py  test_raw_nethack.py  ttyplay.py  ttyplay2.py  ttyrec.py  venv_demo.py
nle/tests/: 2009-02-05.10_33_51.frame.10.txt  2009-02-05.10_33_51.ttyrec.bz2  2012-02-16.21_09_51.frame.10.txt  2012-02-16.21_09_51.ttyrec.bz2  2017-07-28.18_44_17.frame.10.txt  2017-07-28.18_44_17.ttyrec.bz2  2018-09-27.00_20_39.ttyrec.bz2  2019-11-18.08_52_15.frame.10.txt  2019-11-18.08_52_15.ttyrec.bz2  2020-10-03.17_27_10.finalframe.colors.txt  2020-10-03.17_27_10.finalframe.txt  2020-10-03.17_27_10.rowscols.txt  2020-10-03.17_27_10.timestamps.txt.bz2  2020-10-03.17_27_10.ttyrec.bz2  2020-10-16.00_11_28.frame.5.txt  2020-10-16.00_11_28.ttyrec.bz2  lint_changed.sh  nle.2734875.0.actions.txt  nle.2734875.0.frame.150.txt  nle.2734875.0.ttyrec2.bz2  nle.2783801.0.actions.scores.txt  nle.2783801.0.frame.44.txt  nle.2783801.0.ttyrec3.bz2  test_converter.py  test_dataset.py  test_db.py  test_envs.py  test_forking.py  test_memory.py  test_nethack.py  test_populate_db.py  test_profile.py  test_ptyprocess.py  test_pynle.py  test_system.py  test_wrappers.py
nle/tests/altorg/: about.txt  blacklist.txt  db.json  xlogfile.full.txt  xlogfile.nh363
nle/tests/altorg/FlamingKetchup/: 2019-07-30.16:06:23.ttyrec.bz2
nle/tiles/: __init__.py  glyph_mapper.py  tile.py  tiles.pkl
nle/visualization/: glyph2tile.py  utils.py
scripts/: nh-clean-install.sh
src/: allmain.c  cmd.c  end.c  files.c  hacklib.c  mdlib.c  mklev.c  mkmaze.c  mkroom.c  nle.c  options.c  pline.c  rnd.c  sp_lev.c  topten.c  windows.c
sys/unix/: Makefile.src  nledl.c  nleshared.cc  rlmain.cc  sysconf  unixmain.c  unixunix.c
sys/unix/hints/: linux  macosx  macosx-nle
tests/: lint_changed.sh  run-clang-format.py
util/: CMakeLists.txt  makedefs.c
win/rl/: .gitignore  CMakeLists.txt  helper.cc  message.fbs  pynethack.cc  pynle.cc  winrl.cc
win/share/: make_tiles.py  tilemap_nle.c
win/tty/: getline.c  termcap.c  topl.c  wintty.c
